--- a/www/catalog.html
+++ b/www/catalog.html
@@ -9,31 +9,36 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header class="header">
-        <div class="header-wrap">
-            <a href="index.html" class="header-logo">Butterfly</a>
-            <nav class="main-menu">
-                <ul>
-                    <li><a href="catalog.html" class="btn">Каталог</a></li>
-                    <li><a href="rewies.html">Отзывы</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
-                    <li><a href="FAQ.html">FAQ</a></li>
-                </ul>
-            </nav>
+    <header  class="header">
+        <div class="header-inner">
+            <div class="header-wrap">
+                <a href="index.html" class="header-logo">Butterfly</a>
+                <nav class="main-menu">
+                    <ul>
+                        <li><a href="catalog.html">Каталог</a></li>
+                        <li><a href="rewies.html">Отзывы</a></li>
+                        <li><a href="contacts.html">Контакты</a></li>
+                        <li><a href="FAQ.html">FAQ</a></li>
+                    </ul>
+                </nav>
+                <button class="burger">
+                    <img src="images/cil_hamburger-menu.png" alt="Меню">
+                </button>
+            </div>
         </div>
     </header>
-
+ 
     <main>
         <section class="services">
             <div class="services-inner">
                 <h2>Наши работы</h2>
                 <div class="services-works">
-                    <p class="ttl-all">все</p>
-                    <p class="ttl-strong">строгие</p>
-                    <p class="ttl-mery">веселые</p>
-                    <p class="ttl-animal">для животных</p>
-                    <p class="ttl-child">детские</p>
-                    <p class="ttl-adult">для взрослых</p>
+                    <a href="#">все</a>
+                    <a href="#"> строгие</a>
+                    <a href="#">веселые</a>
+                    <a href="#">для животных</a>
+                    <a href="#"> детские</a>
+                    <a href="#">для взрослых</a>
                 </div>
                 <div class="image">
                     <figure class="services-figure">
@@ -94,7 +99,7 @@
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/много бабочек в упаковках.png" alt="Бабочки в упаковках">
+                            <img src="images/бабочки в упаковках.png" alt="Бабочки в упаковках">
                             <figurecaption  class="caption">
                             Бабочка такая 
                             </figurecaption>
@@ -102,7 +107,7 @@
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/бабочки в упаковке.png" alt="Бабочки в упаковке">
+                           <img src="images/серая бабочка в коробочке.png" alt="Бабочки в упаковках">
                             <figurecaption  class="caption">
                            Бабочка растакая  
                             </figurecaption> 
@@ -130,39 +135,48 @@
         </section>
         <section class="order">
             <div class="order-inner">
-                <h2>Закажи пошив</h2>
-                <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет определиться с тканью.</p>               
-                <form action="#" class="form">
-                    <div class="form-field">
-                        <label for="name" class="form-label">Ваше имя</label>
-                        <input name="name" id="name" type="text" placeholder="Иван Иванов"
-                        class="form-input">
-                    </div>
-                    <div class="form-field">
-                        <label for="phone" class="form-label">Телефон</label>
-                        <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
-                    </div>
-                    <div class="form-field">
-                        <button type="submit" class="btn">Заказать</button>
-                    </div>
+                <div class="order-wrap">
+                    <h2>Закажи пошив</h2>
+                    <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет определиться с тканью.</p>               
+                    <form action="#" class="form">
+                        <div class="form-field">
+                            <label for="name" class="form-label">Ваше имя</label>
+                            <input name="name" id="name" type="text" placeholder="Иван Иванов"
+                            class="form-input">
+                        </div>
+                        <div class="form-field">
+                            <label for="phone" class="form-label">Телефон</label>
+                            <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
+                        </div>
+                        <button type="" class="form-btn ">Заказать</button>
+                    </form>
                 </div>
-            </form>
+            
+            </div>
         </section>
     </main>
+
     <footer class="footer">
-        <a href="index.html" class="header-logo">Butterfly</a>
-        <div class="phone">+78008888888</div>
-            <ul class="social">
-                <li class="social-item"><a href="#"><img src="images/uil_instagram-alt.png" alt="Инста"></a>
-                </li>
-                <li class="social-item">
-                    <a href="#"><img src="images/Vector.png" alt="Фэйсбук"></a>
-                </li>
-                <li class="social-item">
-                    <a href="#" ><img src="images/telegr.png" alt="Телеграмм"></a>
-                </li>
-            </ul>
-        </footer>
+        <div class="footer-inner">
+            <div class="footer-wrap">
+                <a href="index.html" class="footer-logo">Butterfly</a>
+                <div class="phone">+78008888888</div>
+                <ul class="social">
+                    <li class="social-item">
+                        <a href="#"><img src="images/uil_instagram-alt.png" alt="Инста"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#"><img src="images/Vector.png" alt="Фэйсбук"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#" ><img src="images/telegr.png" alt="Телеграмм"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>   
     <script src="scripts/script.js"></script>
+    <script src="js/jQuery.js"></script>
+    
 </body>
 </html>
