--- a/www/contacts.html
+++ b/www/contacts.html
@@ -9,80 +9,91 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header  class="header">
-        <div class="header-inner">
-            <div class="header-wrap">
-                <a href="index.html" class="header-logo">Butterfly</a>
-                <nav class="main-menu">
-                    <ul>
-                        <li><a href="catalog.html" class="btn">Каталог</a></li>
-                        <li><a href="rewies.html">Отзывы</a></li>
-                        <li><a href="contacts.html">Контакты</a></li>
-                        <li><a href="FAQ.html">FAQ</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <section class="contacts">
-        <div class="contacts-inner">
-            <h2>Наши контакты</h2>
-            <div class="contacts-wrap">
-                <div class="cities">
-                    <p>Санкт-Петербург</p>
-                    <p>Москва</p>
-                    <p>Великий Новгород</p>
+    <main>
+        <header  class="header">
+            <div class="header-inner">
+                <div class="header-wrap">
+                    <a href="index.html" class="header-logo">Butterfly</a>
+                    <nav class="main-menu">
+                        <ul>
+                            <li><a href="catalog.html">Каталог</a></li>
+                            <li><a href="rewies.html">Отзывы</a></li>
+                            <li><a href="contacts.html">Контакты</a></li>
+                            <li><a href="FAQ.html">FAQ</a></li>
+                        </ul>
+                    </nav>
+                    <button class="burger">
+                        <img src="images/cil_hamburger-menu.png" alt="Меню">
+                    </button>
                 </div>
-                <div class="contacts-content">
-                    <ul>
-                        <li>Спасский переулок, д. 14</li>
-                        <li>Тел: +7 812 800-8080</li>
-                        <li>Пн-Пт с 9-00 до 20-00</li>
-                    </ul>
-                    <div class="map">
-                        <img src="images/map.png" alt="">
+            </div>
+        </header>
+        <section class="contacts">
+            <div class="contacts-inner">
+                <h2>Наши контакты</h2>
+                <div class="contacts-wrap">
+                    <div class="cities">
+                        <a href="#"> Санкт-Петербург</a>
+                        <a href="#"> Москва</a>
+                        <a href="#">Великий Новгород</a>
+                    </div>
+                    <div class="contacts-content">
+                        <ul>
+                            <li>Спасский переулок, д. 14</li>
+                            <li>Тел: +7 812 800-8080</li>
+                            <li>Пн-Пт с 9-00 до 20-00</li>
+                        </ul>
+                        <div class="map">
+                            <img src="images/map.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="order">
-        <div class="order-inner">
-            <h2>Закажи пошив</h2>
-            <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет определиться с тканью.</p>               
-            <form action="#" class="form">
-                <div class="form-field">
-                    <label for="name" class="form-label">Ваше имя</label>
-                    <input name="name" id="name" type="text" placeholder="Иван Иванов"
-                    class="form-input">
+        </section>
+    
+        <section class="order">
+            <div class="order-inner">
+                    <div class="order-wrap">
+                        <h2>Закажи пошив</h2>
+                        <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет определиться с тканью.</p>               
+                        <form action="#" class="form">
+                            <div class="form-field">
+                                <label for="name" class="form-label">Ваше имя</label>
+                                <input name="name" id="name" type="text" placeholder="Иван Иванов"
+                                class="form-input">
+                            </div>
+                            <div class="form-field">
+                                <label for="phone" class="form-label">Телефон</label>
+                                <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
+                            </div>
+                            <button type="" class="form-btn ">Заказать</button>
+                        </form>
+                    </div>
                 </div>
-                <div class="form-field">
-                    <label for="phone" class="form-label">Телефон</label>
-                    <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
-                </div>
-                <div class="form-field">
-                    <button type="submit" class="btn">Заказать</button>
-                </div>
-            </form>
-        </div>
-    </section>
-</main>
+            </section>
+        </main>
+
     <footer class="footer">
-        <a href="index.html" class="header-logo">Butterfly</a>
-        <div class="phone">+78008888888</div>
-            <ul class="social">
-                <li class="social-item"><a href="#"><img src="images/uil_instagram-alt.png" alt="Инста"></a>
-                </li>
-                <li class="social-item">
-                    <a href="#"><img src="images/Vector.png" alt="Фэйсбук"></a>
-                </li>
-                <li class="social-item">
-                    <a href="#" ><img src="images/telegr.png" alt="Телеграмм"></a>
-                </li>
-            </ul>
+        <div class="footer-inner">
+            <div class="footer-wrap">
+                <a href="index.html" class="footer-logo">Butterfly</a>
+                <div class="phone">+78008888888</div>
+                <ul class="social">
+                    <li class="social-item">
+                        <a href="#"><img src="images/uil_instagram-alt.png" alt="Инста"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#"><img src="images/Vector.png" alt="Фэйсбук"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#" ><img src="images/telegr.png" alt="Телеграмм"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
     <script src="scripts/script.js"></script>
+    <script src="js/jQuery.js"></script>
     
 </body>
 </html>
