--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
                 <a href="index.html" class="header-logo">Butterfly</a>
                 <nav class="main-menu">
                     <ul>
-                        <li><a href="catalog.html" class="btn">Каталог</a></li>
+                        <li><a href="catalog.html">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
                         <li><a href="contacts.html">Контакты</a></li>
                         <li><a href="FAQ.html">FAQ</a></li>
@@ -84,21 +84,21 @@
                             <label for="phone" class="form-label">Телефон</label>
                             <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
                         </div>
-                        <div class="form-field">
-                            <button type="submit" class="btn btn-form">Заказать</button>
-                        </div>
+                        <button type="" class="form-btn ">Заказать</button>
                     </form>
                 </div>
-            
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="footer-inner">               <a href="index.html"   class="footer-logo">Butterfly</a>
-            <div class="phone">+78008888888</div>
+        <div class="footer-inner">
+            <div class="footer-wrap">
+                <a href="index.html" class="footer-logo">Butterfly</a>
+                <div class="phone">+78008888888</div>
                 <ul class="social">
-                    <li class="social-item"><a href="#"><img src="images/uil_instagram-alt.png" alt="Инста"></a>
+                    <li class="social-item">
+                        <a href="#"><img src="images/uil_instagram-alt.png" alt="Инста"></a>
                     </li>
                     <li class="social-item">
                         <a href="#"><img src="images/Vector.png" alt="Фэйсбук"></a>
@@ -111,5 +111,7 @@
         </div>
     </footer>
     <script src="scripts/script.js"></script>
+    <script src="js/jQuery.js"></script>
+    
 </body>
 </html>
