--- a/www/rewies.html
+++ b/www/rewies.html
@@ -15,12 +15,15 @@
                 <a href="index.html" class="header-logo">Butterfly</a>
                 <nav class="main-menu">
                     <ul>
-                        <li><a href="catalog.html" class="btn">Каталог</a></li>
+                        <li><a href="catalog.html">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
                         <li><a href="contacts.html">Контакты</a></li>
                         <li><a href="FAQ.html">FAQ</a></li>
                     </ul>
                 </nav>
+                <button class="burger">
+                    <img src="images/cil_hamburger-menu.png" alt="Меню">
+                </button>
             </div>
         </div>
     </header>
@@ -30,51 +33,54 @@
             <div class="rewies-inner">
                 <h2>Отзывы</h2>
                 <div class="rewies-wrap">
-                    <img class="arrow" src="images/left.png" alt="Стрелка влево">
+                    <a href="#"><img class="arrow" src="images/left.png" alt="Стрелка влево"></a>
                     <div class="rewies-item">
                         <div class="rewies-item-vision">
                             <img src="images/review.png" alt="Деловая тетка">
                         </div>
                         <div class="rewies-wrap-info">
-                             <div class="rewies-item-text">
+                            <div class="rewies-item-text">
                                 <h3 class="rewies-item-text-ttl">Лидия Ивановна</h3>
                                 <p>Пацаны красавчики! Быстро и аккуратно починили мой лододо с!
                                 А так же вынесли за собой весь мусор! Еще и в шапке ходют - ван лав!</p>
                             </div>
                         </div>
                     </div>
-                    <img class="arrow" src="images/right.png" alt="Стрелка вправо">
+                    <a href="#"><img class="arrow" src="images/right.png" alt="Стрелка вправо"></a>
                 </div>
             </div>
-       </section>
+        </section>
     
         <section class="order">
             <div class="order-inner">
-                <h2>Закажи пошив</h2>
-                <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет определиться с тканью.</p>               
-                <form action="#" class="form">
-                    <div class="form-field">
-                        <label for="name" class="form-label">Ваше имя</label>
-                        <input name="name" id="name" type="text" placeholder="Иван Иванов"
-                        class="form-input">
-                    </div>
-                    <div class="form-field">
-                        <label for="phone" class="form-label">Телефон</label>
-                        <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
-                    </div>
-                    <div class="form-field">
-                        <button type="submit" class="btn">Заказать</button>
-                    </div>
-                </form>
+                <div class="order-wrap">
+                    <h2>Закажи пошив</h2>
+                    <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет определиться с тканью.</p>               
+                    <form action="#" class="form">
+                        <div class="form-field">
+                            <label for="name" class="form-label">Ваше имя</label>
+                            <input name="name" id="name" type="text" placeholder="Иван Иванов"
+                            class="form-input">
+                        </div>
+                        <div class="form-field">
+                            <label for="phone" class="form-label">Телефон</label>
+                            <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
+                        </div>
+                        <button type="" class="form-btn ">Заказать</button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
 
-    <footer class="footer">
-        <a href="index.html" class="header-logo">Butterfly</a>
-        <div class="phone">+78008888888</div>
+<footer class="footer">
+    <div class="footer-inner">
+        <div class="footer-wrap">
+            <a href="index.html" class="footer-logo">Butterfly</a>
+            <div class="phone">+78008888888</div>
             <ul class="social">
-                <li class="social-item"><a href="#"><img src="images/uil_instagram-alt.png" alt="Инста"></a>
+                <li class="social-item">
+                    <a href="#"><img src="images/uil_instagram-alt.png" alt="Инста"></a>
                 </li>
                 <li class="social-item">
                     <a href="#"><img src="images/Vector.png" alt="Фэйсбук"></a>
@@ -84,8 +90,10 @@
                 </li>
             </ul>
         </div>
-    </footer>
-    <script src="scripts/script.js"></script>
-    
+    </div>
+</footer>
+<script src="scripts/script.js"></script>
+<script src="js/jQuery.js"></script>
+ 
 </body>
 </html>
