поправила картинки, некорректно работает вып.меню

--- a/www/contacts.html
+++ b/www/contacts.html
@@ -14,7 +14,7 @@
             <div class="header-inner">
                 <div class="header-wrap">
                     <a href="index.html" class="header-logo">Butterfly</a>
-                    <nav class="main-menu">
+                    <nav class="main-menu j-main-menu">
                         <ul>
                             <li><a href="catalog.html">Каталог</a></li>
                             <li><a href="rewies.html">Отзывы</a></li>
@@ -22,7 +22,7 @@
                             <li><a href="FAQ.html">FAQ</a></li>
                         </ul>
                     </nav>
-                    <button class="burger">
+                    <button class="burger j-burger">
                         <img src="images/cil_hamburger-menu.png" alt="Меню">
                     </button>
                 </div>
