--- a/www/index.html
+++ b/www/index.html
@@ -41,28 +41,28 @@
             <div class="image">
                 <figure class="services-figure">
                     <div class="figure-img">
-                        <a href="#"><img src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке"></a>
-                        <figurecaption  class="caption">Бабочка такая</figurecaption>
+                        <a href="#"><img src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке">
+                        <figurecaption  class="caption">Бабочка такая</figurecaption></a>
                     </div>
                 </figure>
                 <figure class="services-figure">
                     <div class="figure-img">
-                        <a href="#"><img src="images/бабочки в упаковке.png" alt="Бабочки в упаковке"></a>
-                        <figurecaption  class="caption">Бабочка растакая</figurecaption>
+                        <a href="#"><img src="images/бабочки в упаковке.png" alt="Бабочки в упаковке">
+                        <figurecaption  class="caption">Бабочка растакая</figurecaption></a>
                     </div>
                 </figure>
                 <figure class="services-figure">
                     <div class="figure-img">
-                        <a href="#"><img src="images/мужик в бабочке.png" alt="Мужик в бабочке"></a>
+                        <a href="#"><img src="images/мужик в бабочке.png" alt="Мужик в бабочке">
                         <figurecaption  class="caption">Бабочка сякая
-                        </figurecaption>
+                        </figurecaption></a>
                     </div>
                 </figure>
                 <figure class="services-figure">
                     <div class="figure-img">
-                        <a href="#"><img src="images/котик в бабочке.png" alt="Котик в розовой бабочке"></a>
+                        <a href="#"><img src="images/котик в бабочке.png" alt="Котик в розовой бабочке">
                         <figurecaption  class="caption">Кривая
-                        </figurecaption>
+                        </figurecaption></a>
                     </div>
                 </figure>
             </div> 
