--- a/www/catalog.html
+++ b/www/catalog.html
@@ -13,7 +13,7 @@
         <div class="header-inner">
             <div class="header-wrap">
                 <a href="index.html" class="header-logo">Butterfly</a>
-                <nav class="main-menu">
+                <nav class="main-menu j-main-menu">
                     <ul>
                         <li><a href="catalog.html">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
@@ -21,7 +21,7 @@
                         <li><a href="FAQ.html">FAQ</a></li>
                     </ul>
                 </nav>
-                <button class="burger">
+                <button class="burger j-burger">
                     <img src="images/cil_hamburger-menu.png" alt="Меню">
                 </button>
             </div>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="image">
                     <figure class="services-figure">
-                        <div class="figure-img">
+                        <a href="#"></a> <div class="figure-img">
                             <a href="#"><img src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке">
                             <figurecaption  class="caption">Бабочка такая</figurecaption></a>
                         </div>
